--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.datasource.tomcat.validationQuery=SELECT 1
 spring.jpa.properties.hibernate.dialect=@jdbc.dialect@
 # version applicative
 app.version=@app.version@
+
+spring.jackson.serialization.write-dates-as-timestamps=false
