--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,13 @@
             <version>3.8.0</version>
             <scope>test</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.datatype/jackson-datatype-jsr310 -->
+		<dependency>
+		    <groupId>com.fasterxml.jackson.datatype</groupId>
+		    <artifactId>jackson-datatype-jsr310</artifactId>
+		    <version>2.9.6</version>
+		</dependency>
+        
     </dependencies>
     <build>
         <finalName>back</finalName>
